tests/11-bits-attribute-wrong.stderr
error[E0308]: mismatched types
  --> tests/11-bits-attribute-wrong.rs:11:7
   |
11 |     #[bits = 9]
   |       ^^^^ expected an array with a size of 9, found one with a size of 1
